Closed Bug 1181719 Opened 11 years ago Closed 10 years ago

Stagefright: CHECK_GT( mSize,0u) failed in ABitReader.cpp

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: tsmith, Assigned: mozbugz)

References

Details

(Keywords: crash, testcase, Whiteboard: checkin before 1181223, 1181220, 1181215, 1181213)

Attachments

(3 files, 1 obsolete file)

Attached video test_case.mp4
A/ (20375): /builds/slave/m-cen-l64-asan-d-ntly-00000000/build/src/media/libstagefright/frameworks/av/media/libstagefright/foundation/ABitReader.cpp:32 CHECK_GT( mSize,0u) failed: 0 vs. 0
Summary: CHECK_GT( mSize,0u) failed in ABitReader.cpp → Stagefright: CHECK_GT( mSize,0u) failed in ABitReader.cpp
Component: Audio/Video → Audio/Video: Playback
Gerald, here's another Stagefright bug.
Assignee: nobody → gsquelart
Priority: -- → P1
Attached patch 1181719-gtest.patch (obsolete) — Splinter Review
Part 1: Added gtest case (without mdat). The mdat is big and not useful in this test that only looks at metadata.
Attachment #8683536 - Flags: review?(giles)
Part 2: Check numBitsLeft() before each getBits().
Attachment #8683537 - Flags: review?(giles)
Attachment #8683537 - Flags: review?(giles) → review+
Attachment #8683536 - Flags: review?(giles) → review+
Clarified check-in comment, no actual changes; carrying r+.
Attachment #8683536 - Attachment is obsolete: true
Attachment #8683992 - Flags: review+
Keywords: checkin-needed
Whiteboard: checkin before 1181223, 1181220, 1181215, 1181213
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: