Bug 1181719 - p2: Check numBitsLeft before each getBits - r=rillian